code/include/znn/interface/tmp.txt
@icpc -std=c++14 -MMD -MP -MT test_engine -MF test_engine -DZNN_NO_CUDA -DZNN_NO_HBW -DZNN_NUM_CORES=64 -I/home/ubuntu/znnphi_interface/code/include -I/home/ubuntu/znnphi_interface/code/include/znn -I/home/ubuntu/znnphi_interface -Wall -Wextra -Wno-format -Wno-unknown-pragmas -fmax-errors=5 -DNDEBUG -O3 -ipo -fp-model fast=2 -mkl=sequential -fno-rtti -fno-exceptions -mkl=sequential ./test/test_engine.cpp
In file included from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/blocking.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_image.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer/problem.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer.hpp(4),
                 from ./test/../conv_engine.hpp(3),
                 from ./test/test_engine.cpp(10):
/home/ubuntu/znnphi_interface/code/include/znn/intrin.hpp(138): error: #error directive: "NEED SOME AVX DEFINED"
  #error "NEED SOME AVX DEFINED"
   ^

In file included from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_image.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer/problem.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer.hpp(4),
                 from ./test/../conv_engine.hpp(3),
                 from ./test/test_engine.cpp(10):
/home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/blocking.hpp(26): error: identifier "SIMD_W_BLOCK" is undefined
          pick_best(W, (W + SIMD_W_BLOCK - 1) / SIMD_W_BLOCK, SIMD_W_BLOCK);
                            ^

In file included from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_image.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer/problem.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer.hpp(4),
                 from ./test/../conv_engine.hpp(3),
                 from ./test/test_engine.cpp(10):
/home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/blocking.hpp(30): error: identifier "SIMD_MAX_BLOCK" is undefined
      static const long_t rem_for_h = SIMD_MAX_BLOCK / w;
                                      ^

In file included from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/sub_image.hpp(5),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_image.hpp(4),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer/problem.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer.hpp(4),
                 from ./test/../conv_engine.hpp(3),
                 from ./test/test_engine.cpp(10):
/home/ubuntu/znnphi_interface/code/include/znn/util/conditional_load.hpp(15): error: identifier "SIMD_FLOAT" is undefined
      typename std::enable_if<ZERO, SIMD_FLOAT>::type
                                    ^

In file included from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/sub_image.hpp(5),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_image.hpp(4),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer/problem.hpp(3),
                 from /home/ubuntu/znnphi_interface/code/include/znn/layer/conv/propagation/full_layer.hpp(4),
                 from ./test/../conv_engine.hpp(3),
                 from ./test/test_engine.cpp(10):
/home/ubuntu/znnphi_interface/code/include/znn/util/conditional_load.hpp(23): error: identifier "SIMD_FLOAT" is undefined
      typename std::enable_if<!ZERO, SIMD_FLOAT>::type
                                     ^

compilation aborted for ./test/test_engine.cpp (code 4)
Makefile:128: recipe for target 'test_engine' failed
make: *** [test_engine] Error 4
